--- a/index.html
+++ b/index.html
@@ -8,19 +8,7 @@
 </head>
 
 <body>
-	<div class="textboxlist" id="textboxlist">
-		<span class="tag">Tag1</span>
-		<span class="tag">Tag2</span>
-		<input class="editing" type="text" value="Tag3" />
-
-		<input class="editing" type="text" value="Tag3" />
-		
-		<input class="editing" type="text" value="Tag3" />
-		<span class="tag"></span>
-		<input class="editing" type="text" value="Tag4" />
-		<span class="tag">Tag5</span>
-		<span class="leftover"><span>
-	</div>
+	<div class="textboxlist" id="textboxlist"></div>
 
 	<script src="script.js"></script>
 </body>
