--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
 	<div class="textboxlist" id="textboxlist"></div>
 
+	<div class="textboxlist" id="textboxlist">
+		<button class="tag">Tag 1</button>
+		<input class="editing" type="text" value="Tag 2" />
+		<button class="tag">Tag 3</button>
+		<input class="leftover" type="text" />
+	</div>
 	<script src="script.js"></script>
 </body>
 </html>
