Added inner element to group tags together, and to avoid needing to append the leftover input constantly. Also fixed some styling and javascript is nicer?

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 	<div class="textboxlist" id="textboxlist"></div>
 
 	<div class="textboxlist" id="textboxlist">
-		<button class="tag">Tag 1</button>
-		<input class="editing" type="text" value="Tag 2" />
-		<button class="tag">Tag 3</button>
+		<span class="tags">
+			<button class="tag">Tag 1</button>
+			<input class="editing" type="text" value="Tag 2" />
+			<button class="tag">Tag 3</button>
+		</span>
 		<input class="leftover" type="text" />
 	</div>
 	<script src="script.js"></script>
